# RayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  input.h  interval.h  log.h  main.cpp  material.h  ray.h  ray_tracer.h  sphere.h  tri.h  vector3.h
